--- a/clearsessions.yml
+++ b/clearsessions.yml
@@ -3,7 +3,7 @@ kind: CronJob
 metadata:
   name: clear-django-sessions
 spec:
-  schedule: "0 0 * * *" # This runs the job daily at midnight
+  schedule: "0 0 * * *"
   startingDeadlineSeconds: 20
   jobTemplate:
     spec:
