--- a/kube/secret.yml
+++ b/kube/secret.yml
@@ -4,7 +4,7 @@ metadata:
   name: web-secrets
 type: Opaque
 data:
-  WEB_SECRET_KEY: UkVQTEFDRV9NRTEyMzQ1Ngo=
-  WEB_DEBUG: VFJVRQ==
-  WEB_DATABASE_URL: cG9zdGdyZXM6Ly9rOHNfdGVzdDpPd090QmVwOUZydXRAbXktcGctcG9zdGdyZXNxbC5kZWZhdWx0LnN2Yy5jbHVzdGVyLmxvY2FsOjU0MzIvazhzX3Rlc3Q=
-  WEB_ALLOWED_HOSTS: MTI3LjAuMC4xLGxvY2FsaG9zdCxzYi50ZXN0
+  SECRET_KEY: UkVQTEFDRV9NRTEyMzQ1Ngo=
+  DEBUG: VFJVRQ==
+  DATABASE_URL: cG9zdGdyZXM6Ly9rOHNfdGVzdDpPd090QmVwOUZydXRAbXktcGctcG9zdGdyZXNxbC5kZWZhdWx0LnN2Yy5jbHVzdGVyLmxvY2FsOjU0MzIvazhzX3Rlc3Q=
+  ALLOWED_HOSTS: MTI3LjAuMC4xLGxvY2FsaG9zdCxzYi50ZXN0
